# dome-sdk-cpp

./: .env.example  .gitignore  CMakeLists.txt  README.md
examples/: main.cpp  polymarket_demo.cpp  utils.hpp  websocket_example.cpp
include/dome_api_sdk/: activity_endpoints.hpp  base_endpoint.hpp  client.hpp  dome_websocket.hpp  http_client.hpp  market_endpoints.hpp  orders_endpoints.hpp  polymarket_client.hpp  polymarket_websocket.hpp  types.hpp  utils.hpp  wallet_endpoints.hpp  websocket_client.hpp
src/: base_endpoint.cpp  client.cpp  http_client.cpp
src/endpoints/: activity_endpoints.cpp  dome_websocket.cpp  market_endpoints.cpp  orders_endpoints.cpp  polymarket_client.cpp  polymarket_websocket.cpp  wallet_endpoints.cpp  websocket_client.cpp
